# MyAlertbot

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
configs/: schedule.example.yaml  txbot.config.example.json
src/alertbot/: __main__.py  common.py  controller.py  plugin_registry.py  transport.py  transport_manager.py
src/alertbot/bots/: airqualitybot.py  aurorabot.py  calendar_commands.py  calendar_ics.py  calendarbot.py  cryptobot.py  geoshockbot.py  ghbot.py  gnosismultisigtxbot.py  lumabot.py  metalsbot.py  newsubdomainbot.py  newtopaimodelbot.py  rainbot.py  rssbot.py  stockalertbot.py  stockbot.py  sunrisebot.py  txbot.py  weatherbot.py  ytbot.py
src/alertbot/bots/private/: .gitignore  __init__.py
src/alertbot/transports/: __init__.py  matrix_transport.py  telegram_transport.py
tests/: test_airqualitybot.py  test_aurorabot.py  test_calendar_commands.py  test_calendar_ics.py  test_calendarbot.py  test_common_env.py  test_controller_schedule.py  test_cryptobot.py  test_geoshockbot.py  test_ghbot.py  test_gnosismultisigtxbot.py  test_newsubdomainbot.py  test_newtopaimodelbot.py  test_plugin_registry.py  test_rssbot.py  test_stockbot.py  test_sunrisebot.py  test_txbot.py  test_weatherbot.py
