[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "alertbot"
version = "0.1.0"
description = "A collection of Telegram-based monitoring bots managed by a central controller"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot>=21.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "apscheduler>=3.10.0",
    "aiohttp>=3.9.0",
    "pypdf>=5.0.0",
]

[project.scripts]
alertbot = "alertbot.controller:main"

[tool.setuptools.packages.find]
where = ["src"]
